commented unused table name

--- a/src/main/resources/templates/time_sheet_form.html
+++ b/src/main/resources/templates/time_sheet_form.html
@@ -24,6 +24,7 @@
                     <!--placeholder="Your name"-->
                     <input aria-describedby="Enter your name."
                            class="form-control"
+                           placeholder="To Be Embedded In the Future"
                            th:field="*{name}"
                            type="text"/>
                     <div class="alert alert-danger"
@@ -48,20 +49,20 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <label th:for="managerName">Manager Name</label>
-                    <input aria-describedby="Enter the name of Manager"
-                           class="form-control"
-                           placeholder="Manager Name"
-                           th:field="*{managerName}"
-                           type="text"/>
-                    <div
-                            class="alert alert-danger"
-                            th:errors="*{managerName}"
-                            th:if="${#fields.hasErrors('managerName')}">
-                        Manager Name Error: Please enter the correct Manager name.
-                    </div>
-                </div>
+<!--                <div class="form-group">-->
+<!--                    <label th:for="managerName">Manager Name</label>-->
+<!--                    <input aria-describedby="Enter the name of Manager"-->
+<!--                           class="form-control"-->
+<!--                           placeholder="Manager Name"-->
+<!--                           th:field="*{managerName}"-->
+<!--                           type="text"/>-->
+<!--                    <div-->
+<!--                            class="alert alert-danger"-->
+<!--                            th:errors="*{managerName}"-->
+<!--                            th:if="${#fields.hasErrors('managerName')}">-->
+<!--                        Manager Name Error: Please enter the correct Manager name.-->
+<!--                    </div>-->
+<!--                </div>-->
 
 
                 <div class="form-group">
@@ -124,16 +125,16 @@
                     </div>
                 </div>
 
-                <div class="form-group form-check">
-                    <input aria-describedby="Approve by Manager"
-                           class="form-check-input"
-                           th:field="*{approved}"
-                           type="checkbox"/>
-                    <label class="form-check-label"
-                           th:for="approved">
-                        Please tick this box to approve.
-                    </label>
-                </div>
+<!--                <div class="form-group form-check">-->
+<!--                    <input aria-describedby="Approve by Manager"-->
+<!--                           class="form-check-input"-->
+<!--                           th:field="*{approved}"-->
+<!--                           type="checkbox"/>-->
+<!--                    <label class="form-check-label"-->
+<!--                           th:for="approved">-->
+<!--                        Please tick this box to approve.-->
+<!--                    </label>-->
+<!--                </div>-->
 
                 <button class="btn btn-primary-outline" id="submit" type="submit">Submit Time Sheet Form</button>
 
