--- a/src/main/resources/templates/time_sheet_form_2.html
+++ b/src/main/resources/templates/time_sheet_form_2.html
@@ -24,7 +24,7 @@
                     <!--placeholder="Your name"-->
                     <input aria-describedby="Enter your name."
                            class="form-control"
-                           placeholder="Name"
+                           placeholder="To Be Embedded In the Future"
                            th:field="*{name}"
                            type="text"/>
                     <div class="alert alert-danger"
@@ -120,16 +120,16 @@
                     </div>
                 </div>
 
-                <div class="form-group form-check">
-                    <input aria-describedby="Approve by Manager"
-                           class="form-check-input"
-                           th:field="*{approved}"
-                           type="checkbox"/>
-                    <label class="form-check-label"
-                           th:for="approved">
-                        Please tick this box to approve.
-                    </label>
-                </div>
+<!--                <div class="form-group form-check">-->
+<!--                    <input aria-describedby="Approve by Manager"-->
+<!--                           class="form-check-input"-->
+<!--                           th:field="*{approved}"-->
+<!--                           type="checkbox"/>-->
+<!--                    <label class="form-check-label"-->
+<!--                           th:for="approved">-->
+<!--                        Please tick this box to approve.-->
+<!--                    </label>-->
+<!--                </div>-->
 
                 <button class="btn btn-primary-outline" id="submit" type="submit">Submit Time Sheet Form</button>
 
