--- a/src/main/resources/templates/time_sheet_form_2.html
+++ b/src/main/resources/templates/time_sheet_form_2.html
@@ -1,163 +1,163 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" rel="stylesheet">
-    <link href="/css/starter-template.css" rel="stylesheet">
-</head>
-<body>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"-->
+<!--          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" rel="stylesheet">-->
+<!--    <link href="/css/starter-template.css" rel="stylesheet">-->
+<!--</head>-->
+<!--<body>-->
 
-<main class="container mt-4" role="main">
-    <div class="starter-template">
+<!--<main class="container mt-4" role="main">-->
+<!--    <div class="starter-template">-->
 
-        <div id=timeSheetDetails>
+<!--        <div id=timeSheetDetails>-->
 
-            <div>You are creating a new time sheet.
-            </div>
+<!--            <div>You are creating a new time sheet.-->
+<!--            </div>-->
 
-            <h3>Please enter your details</h3>
+<!--            <h3>Please enter your details</h3>-->
 
-            <forms action="#" method="post" th:action="@{/timeSheetDetails}" th:object="${timeSheetKey}">
+<!--            <forms action="#" method="post" th:action="@{/timeSheetDetails}" th:object="${timeSheetKey}">-->
 
-                <div class="form-group">
-                    <label th:for="name">Name</label>
-                    <!--placeholder="Your name"-->
-                    <input aria-describedby="Enter your name."
-                           class="form-control"
-                           placeholder="To Be Embedded In the Future"
-                           th:field="*{name}"
-                           type="text"/>
-                    <div class="alert alert-danger"
-                         th:errors="*{name}"
-                         th:if="${#fields.hasErrors('name')}">
-                        Name Error
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label th:for="daysWorked">Days Worked</label>
-                    <button id="addNewDate">Add Another Date</button>
-                    <div>
-                    <form>
-                        <input type="date" name="Date">
-                    </form>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label th:for="managerName">Manager Name</label>
-                    <input aria-describedby="Enter the name of Manager"
-                           class="form-control"
-                           placeholder="Manager Name"
-                           th:field="*{managerName}"
-                           type="text"/>
-                    <div
-                            class="alert alert-danger"
-                            th:errors="*{managerName}"
-                            th:if="${#fields.hasErrors('managerName')}">
-                        Manager Name Error: Please enter the correct Manager name.
-                    </div>
-                </div>
-
-
-                <div class="form-group">
-                    <label th:for="agency">Agency</label>
-                    <input aria-describedby="Enter the name of Agency"
-                           class="form-control"
-                           placeholder="Agency"
-                           th:field="*{agency}"
-                           type="text"/>
-                    <div class="alert alert-danger"
-                         th:errors="*{agency}"
-                         th:if="${#fields.hasErrors('agency')}">
-                        Agency Error: Please enter the correct Agency name.
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label th:for="overtimeCompleted">Overtime Completed</label>
-                    <input aria-describedby="Enter the amount of overtime completed."
-                           class="form-control"
-                           placeholder="Overtime Completed"
-                           th:field="*{overtimeCompleted}"
-                           type="text"/>
-                    <div class="alert alert-danger"
-                         th:errors="*{overtimeCompleted}"
-                         th:if="${#fields.hasErrors('overtimeCompleted')}">
-                        Overtime Error: Please enter a valid number.
-                    </div>
-
-                </div>
-
-                <div class="form-group">
-                    <label th:for="otReason">Overtime Reason</label>
-                    <input aria-describedby="Enter the reason for overtime."
-                           class="form-control"
-                           placeholder="Overtime Reason"
-                           th:field="*{overtimeReason}"
-                           type="text"/>
-
-                    <div class="alert alert-danger"
-                         th:errors="*{overtimeReason}"
-                         th:if="${#fields.hasErrors('overtimeReason')}">
-                        Overtime Reason Error
-                    </div>
-
-                </div>
-
-
-                <div class="form-group">
-                    <label th:for="expenses">How much was your expenses?</label>
-
-                    <input aria-describedby="Please enter the amount of your expenses" class="form-control"
-                           placeholder="00.00"
-                           th:field="*{expenses}"
-                           type="text"/>
-                    <div class="alert alert-danger"
-                         th:errors="*{expenses}"
-                         th:if="${#fields.hasErrors('expenses')}">
-                        Invalid Expenses: Please enter a valid number.
-                    </div>
-                </div>
-
-<!--                <div class="form-group form-check">-->
-<!--                    <input aria-describedby="Approve by Manager"-->
-<!--                           class="form-check-input"-->
-<!--                           th:field="*{approved}"-->
-<!--                           type="checkbox"/>-->
-<!--                    <label class="form-check-label"-->
-<!--                           th:for="approved">-->
-<!--                        Please tick this box to approve.-->
-<!--                    </label>-->
+<!--                <div class="form-group">-->
+<!--                    <label th:for="name">Name</label>-->
+<!--                    &lt;!&ndash;placeholder="Your name"&ndash;&gt;-->
+<!--                    <input aria-describedby="Enter your name."-->
+<!--                           class="form-control"-->
+<!--                           placeholder="To Be Embedded In the Future"-->
+<!--                           th:field="*{name}"-->
+<!--                           type="text"/>-->
+<!--                    <div class="alert alert-danger"-->
+<!--                         th:errors="*{name}"-->
+<!--                         th:if="${#fields.hasErrors('name')}">-->
+<!--                        Name Error-->
+<!--                    </div>-->
 <!--                </div>-->
 
-                <button class="btn btn-primary-outline" id="submit" type="submit">Submit Time Sheet Form</button>
+<!--                <div class="form-group">-->
+<!--                    <label th:for="daysWorked">Days Worked</label>-->
+<!--                    <button id="addNewDate">Add Another Date</button>-->
+<!--                    <div>-->
+<!--                    <form>-->
+<!--                        <input type="date" name="Date">-->
+<!--                    </form>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-            </forms>
+<!--                <div class="form-group">-->
+<!--                    <label th:for="managerName">Manager Name</label>-->
+<!--                    <input aria-describedby="Enter the name of Manager"-->
+<!--                           class="form-control"-->
+<!--                           placeholder="Manager Name"-->
+<!--                           th:field="*{managerName}"-->
+<!--                           type="text"/>-->
+<!--                    <div-->
+<!--                            class="alert alert-danger"-->
+<!--                            th:errors="*{managerName}"-->
+<!--                            th:if="${#fields.hasErrors('managerName')}">-->
+<!--                        Manager Name Error: Please enter the correct Manager name.-->
+<!--                    </div>-->
+<!--                </div>-->
 
 
-        </div>
-    </div>
-</main>
+<!--                <div class="form-group">-->
+<!--                    <label th:for="agency">Agency</label>-->
+<!--                    <input aria-describedby="Enter the name of Agency"-->
+<!--                           class="form-control"-->
+<!--                           placeholder="Agency"-->
+<!--                           th:field="*{agency}"-->
+<!--                           type="text"/>-->
+<!--                    <div class="alert alert-danger"-->
+<!--                         th:errors="*{agency}"-->
+<!--                         th:if="${#fields.hasErrors('agency')}">-->
+<!--                        Agency Error: Please enter the correct Agency name.-->
+<!--                    </div>-->
+<!--                </div>-->
+
+<!--                <div class="form-group">-->
+<!--                    <label th:for="overtimeCompleted">Overtime Completed</label>-->
+<!--                    <input aria-describedby="Enter the amount of overtime completed."-->
+<!--                           class="form-control"-->
+<!--                           placeholder="Overtime Completed"-->
+<!--                           th:field="*{overtimeCompleted}"-->
+<!--                           type="text"/>-->
+<!--                    <div class="alert alert-danger"-->
+<!--                         th:errors="*{overtimeCompleted}"-->
+<!--                         th:if="${#fields.hasErrors('overtimeCompleted')}">-->
+<!--                        Overtime Error: Please enter a valid number.-->
+<!--                    </div>-->
+
+<!--                </div>-->
+
+<!--                <div class="form-group">-->
+<!--                    <label th:for="otReason">Overtime Reason</label>-->
+<!--                    <input aria-describedby="Enter the reason for overtime."-->
+<!--                           class="form-control"-->
+<!--                           placeholder="Overtime Reason"-->
+<!--                           th:field="*{overtimeReason}"-->
+<!--                           type="text"/>-->
+
+<!--                    <div class="alert alert-danger"-->
+<!--                         th:errors="*{overtimeReason}"-->
+<!--                         th:if="${#fields.hasErrors('overtimeReason')}">-->
+<!--                        Overtime Reason Error-->
+<!--                    </div>-->
+
+<!--                </div>-->
 
 
-</div>
+<!--                <div class="form-group">-->
+<!--                    <label th:for="expenses">How much was your expenses?</label>-->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script>
-    var counter = 1;
-    $(document).ready(function(){
-        $("#addNewDate").on('click',function(){
-            counter++;
-            if(counter <= 5) {
-                $("form").append(' <input type=\"date\" name=\"Date\">');
-            } else {
-                window.alert("Limit Reached");
-            }
-        });
+<!--                    <input aria-describedby="Please enter the amount of your expenses" class="form-control"-->
+<!--                           placeholder="00.00"-->
+<!--                           th:field="*{expenses}"-->
+<!--                           type="text"/>-->
+<!--                    <div class="alert alert-danger"-->
+<!--                         th:errors="*{expenses}"-->
+<!--                         th:if="${#fields.hasErrors('expenses')}">-->
+<!--                        Invalid Expenses: Please enter a valid number.-->
+<!--                    </div>-->
+<!--                </div>-->
 
-    });
-</script>
+<!--&lt;!&ndash;                <div class="form-group form-check">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <input aria-describedby="Approve by Manager"&ndash;&gt;-->
+<!--&lt;!&ndash;                           class="form-check-input"&ndash;&gt;-->
+<!--&lt;!&ndash;                           th:field="*{approved}"&ndash;&gt;-->
+<!--&lt;!&ndash;                           type="checkbox"/>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <label class="form-check-label"&ndash;&gt;-->
+<!--&lt;!&ndash;                           th:for="approved">&ndash;&gt;-->
+<!--&lt;!&ndash;                        Please tick this box to approve.&ndash;&gt;-->
+<!--&lt;!&ndash;                    </label>&ndash;&gt;-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
 
-</body>
-</html>
+<!--                <button class="btn btn-primary-outline" id="submit" type="submit">Submit Time Sheet Form</button>-->
+
+<!--            </forms>-->
+
+
+<!--        </div>-->
+<!--    </div>-->
+<!--</main>-->
+
+
+<!--</div>-->
+
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
+<!--<script>-->
+<!--    var counter = 1;-->
+<!--    $(document).ready(function(){-->
+<!--        $("#addNewDate").on('click',function(){-->
+<!--            counter++;-->
+<!--            if(counter <= 5) {-->
+<!--                $("form").append(' <input type=\"date\" name=\"Date\">');-->
+<!--            } else {-->
+<!--                window.alert("Limit Reached");-->
+<!--            }-->
+<!--        });-->
+
+<!--    });-->
+<!--</script>-->
+
+<!--</body>-->
+<!--</html>-->
