--- a/src/main/resources/templates/time_sheet_form_3.html
+++ b/src/main/resources/templates/time_sheet_form_3.html
@@ -1,107 +1,107 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">-->
-<!--<head>-->
-<!--    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"-->
-<!--          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" rel="stylesheet">-->
-<!--    <link href="/css/starter-template.css" rel="stylesheet">-->
-<!--</head>-->
-<!--<body>-->
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head>
+    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" rel="stylesheet">
+    <link href="/css/starter-template.css" rel="stylesheet">
+</head>
+<body>
 
-<!--<main class="container mt-4" role="main">-->
-<!--    <div class="starter-template">-->
+<main class="container mt-4" role="main">
+    <div class="starter-template">
 
-<!--        <div id=timeSheetDetails>-->
+        <div id=timeSheetDetails>
 
-<!--            <div>You are creating a new time sheet.-->
-<!--            </div>-->
+            <div>You are creating a new time sheet.
+            </div>
 
-<!--            <h3>Please enter your details</h3>-->
+            <h3>Please enter your details</h3>
 
-<!--            <forms action="#" method="post" th:action="@{/timeSheetDetails}" th:object="${timeSheetKey}">-->
+            <form action="#" method="post" th:action="@{/timeSheetDetails}" th:object="${timeSheetKey}">
 
-<!--                <div class="form-group">-->
-<!--                    <label th:for="name">Name</label>-->
-<!--                    &lt;!&ndash;placeholder="Your name"&ndash;&gt;-->
-<!--                    <input aria-describedby="Enter your name."-->
-<!--                           class="form-control"-->
-<!--                           placeholder="To Be Embedded In the Future"-->
-<!--                           th:field="*{name}"-->
-<!--                           type="text"/>-->
-<!--                    <div class="alert alert-danger"-->
-<!--                         th:errors="*{name}"-->
-<!--                         th:if="${#fields.hasErrors('name')}">-->
-<!--                        Name Error-->
-<!--                    </div>-->
-<!--                </div>-->
+                <div class="form-group">
+                    <label th:for="name">Name</label>
+                    <!--placeholder="Your name"-->
+                    <input aria-describedby="Enter your name."
+                           class="form-control"
+                           placeholder="To Be Embedded In the Future"
+                           th:field="*{name}"
+                           type="text"/>
+                    <div class="alert alert-danger"
+                         th:errors="*{name}"
+                         th:if="${#fields.hasErrors('name')}">
+                        Name Error
+                    </div>
+                </div>
 
-<!--                <div class="form-group">-->
-<!--                    <label th:for="agency">Agency</label>-->
-<!--                    <input aria-describedby="Enter the name of Agency"-->
-<!--                           class="form-control"-->
-<!--                           placeholder="Agency"-->
-<!--                           th:field="*{agency}"-->
-<!--                           type="text"/>-->
-<!--                    <div class="alert alert-danger"-->
-<!--                         th:errors="*{agency}"-->
-<!--                         th:if="${#fields.hasErrors('agency')}">-->
-<!--                        Agency Error: Please enter the correct Agency name.-->
-<!--                    </div>-->
-<!--                </div>-->
+                <div class="form-group">
+                    <label th:for="agency">Agency</label>
+                    <input aria-describedby="Enter the name of Agency"
+                           class="form-control"
+                           placeholder="Agency"
+                           th:field="*{agency}"
+                           type="text"/>
+                    <div class="alert alert-danger"
+                         th:errors="*{agency}"
+                         th:if="${#fields.hasErrors('agency')}">
+                        Agency Error: Please enter the correct Agency name.
+                    </div>
+                </div>
 
-<!--                <div class="form-group">-->
-<!--                    <label th:for="daysWorked">Days Worked</label>-->
-<!--                    <input aria-describedby="Enter how many days you have worked."-->
-<!--                           class="form-control"-->
-<!--                           placeholder="Days Worked"-->
-<!--                           th:field="*{daysWorked}"-->
-<!--                           type="text"/>-->
-<!--                    <div-->
-<!--                            class="alert alert-danger"-->
-<!--                            th:errors="*{daysWorked}"-->
-<!--                            th:if="${#fields.hasErrors('daysWorked')}">-->
-<!--                        Days Worked Error: Please enter a valid number.-->
-<!--                    </div>-->
-<!--                </div>-->
-
-
-<!--                <div class="form-group">-->
-<!--                    <label th:for="overtimeCompleted">Overtime Completed</label>-->
-<!--                    <input aria-describedby="Enter the amount of overtime completed."-->
-<!--                           class="form-control"-->
-<!--                           placeholder="Overtime Completed"-->
-<!--                           th:field="*{overtimeCompleted}"-->
-<!--                           type="text"/>-->
-<!--                    <div class="alert alert-danger"-->
-<!--                         th:errors="*{overtimeCompleted}"-->
-<!--                         th:if="${#fields.hasErrors('overtimeCompleted')}">-->
-<!--                        Overtime Error: Please enter a valid number.-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--                <div class="form-group">-->
-<!--                    <label th:for="weekEnding">Week Ending</label>-->
-<!--                    <p id="lastDay">-->
-<!--                </div>-->
-
-<!--                <button class="btn btn-primary-outline" id="submit" type="submit">Submit Time Sheet Form</button>-->
-
-<!--            </forms>-->
+                <div class="form-group">
+                    <label th:for="daysWorked">Days Worked</label>
+                    <input aria-describedby="Enter how many days you have worked."
+                           class="form-control"
+                           placeholder="Days Worked"
+                           th:field="*{days_worked}"
+                           type="text"/>
+                    <div
+                            class="alert alert-danger"
+                            th:errors="*{days_worked}"
+                            th:if="${#fields.hasErrors('days_worked')}">
+                        Days Worked Error: Please enter a valid number.
+                    </div>
+                </div>
 
 
-<!--        </div>-->
-<!--    </div>-->
-<!--</main>-->
+                <div class="form-group">
+                    <label th:for="overtime_completed">Overtime Completed</label>
+                    <input aria-describedby="Enter the amount of overtime completed."
+                           class="form-control"
+                           placeholder="Overtime Completed"
+                           th:field="*{overtime_completed}"
+                           type="text"/>
+                    <div class="alert alert-danger"
+                         th:errors="*{overtime_completed}"
+                         th:if="${#fields.hasErrors('overtime_completed')}">
+                        Overtime Error: Please enter a valid number.
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label th:for="week_ending">Week Ending</label>
+                    <p id="lastDay">
+                </div>
+
+                <button class="btn btn-primary-outline" id="submit" type="submit">Submit Time Sheet Form</button>
+
+            </form>
 
 
-<!--</div>-->
+        </div>
+    </div>
+</main>
 
-<!--<script>-->
 
-<!--    var startingDate = new Date("01-Nov-2019");-->
-<!--    var lastDay = new Date(startingDate.getTime() + 70 * 70 * 24 * 7 * 1000).toDateString();-->
-<!--    document.getElementById('lastDay').innerText = lastDay;-->
+</div>
 
-<!--</script>-->
+<script>
 
-<!--</body>-->
-<!--</html>-->
+    var startingDate = new Date("01-Nov-2019");
+    var lastDay = new Date(startingDate.getTime() + 70 * 70 * 24 * 7 * 1000).toDateString();
+    document.getElementById('lastDay').innerText = lastDay;
+
+</script>
+
+</body>
+</html>
