created Contractor login form

--- a/src/main/resources/templates/home_portal.html
+++ b/src/main/resources/templates/home_portal.html
@@ -6,7 +6,7 @@
 <body>
     <div th:replace="fragments/header :: header"></div>
     <div class="serializedFormContainer">
-        <form action="/contractProfile" method="get" class="panel">
+        <form action="/contractorProfile" method="get" class="panel">
 
             <input type="submit" id="submit" value="submit" class="btn-lg"/>
 
