--- a/src/main/resources/templates/contractor_view.html
+++ b/src/main/resources/templates/contractor_view.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" rel="stylesheet">
-    <link href="/css/starter-template.css" rel="stylesheet">
-</head>
-<body>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
+<head th:replace="fragments/header :: head">
+    <!-- Fragment Insert -->
+</head>
+
+<body>
+<div th:replace="fragments/header :: header"></div>
 <main class="container mt-4" role="main">
     <div class="starter-template">
 
+        <!--Contractor Details Here-->
+        <div id=contractorProfile>
+            <div>Logged in as: Contractor</div>
+            <h3>As a Contractor you may produce a new timesheet </h3>
+        </div>
+
+        <!-- Timesheet Form Here -->
         <div id=timeSheetDetails>
 
             <div>You are creating a new time sheet.
@@ -17,7 +24,7 @@
 
             <h3>Please enter your details</h3>
 
-            <form action="#" method="post" th:action="@{/timeSheetDetails}" th:object="${timeSheetKey}">
+            <form action="#" method="post" th:action="@{/newTimesheet}" th:object="${TimesheetKey}">
 
                 <div class="form-group">
                     <label th:for="name">Name</label>
@@ -97,7 +104,7 @@
 
 <script>
 
-    var startingDate = new Date("01-Nov-2019");
+    var startingDate = new Date("15-Nov-2019");
     var lastDay = new Date(startingDate.getTime() + 70 * 70 * 24 * 7 * 1000).toDateString();
     document.getElementById('lastDay').innerText = lastDay;
 
