--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+
+<!--Fragment Start-->
 <head th:fragment="head">
     <meta charset="UTF-8">
     <title>Admiral Time Sheet Portal</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          crossorigin="anonymous"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB">
+    <link href="/static/css/starter-template.css"
+          rel="stylesheet">
 </head>
+<!--Fragment End-->
+
 
 <body>
-
+<!--Fragment Start-->
 <header th:fragment="header" class="masthead mb-auto">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Admiral TSP</a>
+
+        <img th:src="@{https://www.admiral.com/modules/contrib/home_alone/img/client-logo.png}" th:width="235"
+             th:height="68"/>
+        <a class="navbar-brand" href="/"><h1 style="color:#2350A1"><b> | TSP Portal</b></h1></a>
+
     </nav>
 </header>
-
+<!--Fragment End-->
 </body>
+
+
 </html>
