--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,8 +10,7 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
           crossorigin="anonymous"
           integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB">
-    <link href="/static/css/starter-template.css"
-          rel="stylesheet">
+    <link href="css/starter-template.css" rel="stylesheet"/>
 </head>
 <!--Fragment End-->
 
@@ -20,10 +19,14 @@
 <!--Fragment Start-->
 <header th:fragment="header" class="masthead mb-auto">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-        <img th:src="@{https://www.admiral.com/modules/contrib/home_alone/img/client-logo.png}" th:width="235"
-             th:height="68"/>
-        <a class="navbar-brand" href="/"><h1 style="color:#2350A1"><b> | TSP Portal</b></h1></a>
+        <a class="navbar-brand" href="/">
+            <div>
+                <img src="images/banner_admiral_logo.png" th:width="235" th:height="68"/>
+            </div>
+            <div>
+                <h1 style="color:#2350A1"><b> | TSP Portal</b></h1>
+            </div>
+        </a>
 
     </nav>
 </header>
