--- a/src/main/resources/templates/contractor_view.html
+++ b/src/main/resources/templates/contractor_view.html
@@ -90,6 +90,11 @@
                     <p id="lastDay">
                 </div>
 
+                <input
+                        th:name="${_csrf.parameterName}"
+                        th:value="${_csrf.token}"
+                        type="hidden"/>
+
                 <button class="btn btn-primary-outline" id="submit" type="submit">Submit Time Sheet Form</button>
 
             </form>
