--- a/src/main/resources/templates/portal_view.html
+++ b/src/main/resources/templates/portal_view.html
@@ -19,8 +19,13 @@
     </div>
 
     <div sec:authorize="!isAuthenticated()">
-        Login
+        <a class="btn btn-primary"
+        th:href="@{/login}">Login</a>
     </div>
+
+    <a class="btn btn-primary"
+       th:href="@{/register.html}">Register</a>
+
 
 
     <!--    &lt;!&ndash;  TODO Login Form Here + Fields Here  &ndash;&gt;-->
