additional changes to structures and comments

--- a/src/main/resources/templates/contractor_view.html
+++ b/src/main/resources/templates/contractor_view.html
@@ -16,7 +16,7 @@
             <h3>As a Contractor you may produce a new timesheet </h3>
         </div>
 
-        <!-- Timesheet Form Here -->
+        <!-- timesheet Form Here -->
         <div id=timeSheetDetails>
 
             <div>You are creating a new time sheet.
