--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">
             <div>
-                <img src="images/banner_admiral_logo.png" th:width="235" th:height="68"/>
+                <img th:src="@{/images/banner_admiral_logo.png}" th:width="235" th:height="68"/>
             </div>
             <div>
                 <h1 style="color:#2350A1"><b> | TSP Portal</b></h1>
