commented registration entities for next Spring

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,6 +17,8 @@
     <div><label> Password: <input name="password" type="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
+    <a class="btn btn-primary"
+       th:href="@{/register}" th:id="register">Register</a>
 </div>
 </body>
 </html>
