--- a/src/main/resources/templates/portal_view.html
+++ b/src/main/resources/templates/portal_view.html
@@ -23,19 +23,14 @@
         th:href="@{/login}">Login</a>
     </div>
 
-    <a class="btn btn-primary"
-       th:href="@{/register.html}">Register</a>
-
-
-
-    <!--    &lt;!&ndash;  TODO Login Form Here + Fields Here  &ndash;&gt;-->
-<!--    <div class="row">-->
-<!--        <a class="btn btn-primary btn-lg btn-block"-->
-<!--           th:href="@{/contractorView}"-->
-<!--           th:id="@{contractorView}">-->
-<!--            <span>Sign In</span>-->
-<!--        </a>-->
-<!--    </div>-->
+        <!--  TODO Login Form Here + Fields Here  -->
+    <div class="row">
+        <a class="btn btn-primary btn-lg btn-block"
+           th:href="@{/contractorView}"
+           th:id="contractorView">
+            <span>Sign In</span>
+        </a>
+    </div>
 
 </div>
 </body>
