control view design

--- a/src/main/resources/templates/contractor_view.html
+++ b/src/main/resources/templates/contractor_view.html
@@ -12,8 +12,7 @@
 
         <!--Contractor Details Here-->
         <div id=contractorProfile>
-            <div>Logged in as: Contractor</div>
-            <h3>As a Contractor you may produce a new timesheet </h3>
+            <div><h3>Logged in as: Contractor</h3></div>
         </div>
 
         <!-- timesheet Form Here -->
