--- a/src/main/resources/templates/manager_view.html
+++ b/src/main/resources/templates/manager_view.html
@@ -32,18 +32,26 @@
                 </thead>
                 <tbody>
                 <tr th:each="Timesheet: ${TimesheetKey}">
-                    <td><span th:text="${Timesheet.contractor.name}" /></td>
-                    <td><span th:text="${Timesheet.agency.name}" /></td>
-                    <td><span th:text="${Timesheet.daysWorked}" /></td>
-                    <td><span th:text="${Timesheet.overtime}" /></td>
-                    <td><span th:text="${Timesheet.week_finish}" /></td>
-                    <td> <button class="btn btn-primary" id="approve" type="submit">Approve</button> </td>
-                    <td> <button class="btn btn-warning" id="reject" type="">Reject</button> </td>
+                    <td><span th:text="${Timesheet.contractor.name}"></span></td>
+                    <td><span th:text="${Timesheet.agency.name}"></span></td>
+                    <td><span th:text="${Timesheet.daysWorked}"></span></td>
+                    <td><span th:text="${Timesheet.overtime}"></span></td>
+                    <td><span th:text="${Timesheet.week_finish}"></span></td>
+                    <td> <button class="btn btn-success" th:onclick="|sendApproval('${Timesheet.id}')|" id="approve" >Approve</button> </td>
+                   <td> <button class="btn btn-danger" id="reject">Reject</button> </td>
                 </tbody>
             </table>
 
         </div>
     </div>
    </main>
+    <script>
+        function sendApproval(id) {
+            let xhr = new XMLHttpRequest();
+
+            xhr.open('POST', `/api/timesheets/approve/${id}`);
+            xhr.send();
+        }
+    </script>
 </body>
 </html>
