contractor template wording change

--- a/src/main/resources/templates/contractor_view.html
+++ b/src/main/resources/templates/contractor_view.html
@@ -12,16 +12,15 @@
 
         <!--Contractor Details Here-->
         <div id=contractorProfile>
-            <div><h3>Logged in as: Contractor</h3></div>
+            <div><h4>Logged in as: Contractor</h4></div>
         </div>
 
         <!-- timesheet Form Here -->
         <div id=timeSheetDetails>
 
-            <div>You are creating a new time sheet.
             </div>
 
-            <h3>Please enter your details</h3>
+            <h3>Please Enter Your Time Sheet Details</h3>
 
             <form action="#" method="post" th:action="@{/newTimesheet}" th:object="${TimesheetKey}">
 
