--- a/src/main/resources/templates/contractor_view.html
+++ b/src/main/resources/templates/contractor_view.html
@@ -88,7 +88,7 @@
                     <p id="lastDay">
                 </div>
 
-                <button class="btn btn-primary-outline" id="submit" type="submit">Submit Time Sheet Form</button>
+                <button class="btn btn-primary" id="submit" type="submit">Submit Time Sheet Form</button>
 
             </form>
 
