added mapping for admin login

--- a/src/main/resources/templates/portal_view.html
+++ b/src/main/resources/templates/portal_view.html
@@ -27,13 +27,13 @@
     </div>
 
         <!--  TODO Login Form Here + Fields Here  -->
-    <div class="row">
-        <a class="btn btn-primary"
-           th:href="@{/contractorView}"
-           th:id="contractorView">
-            <span>Sign In</span>
-        </a>
-    </div>
+<!--    <div class="row">-->
+<!--        <a class="btn btn-primary"-->
+<!--           th:href="@{/contractorView}"-->
+<!--           th:id="contractorView">-->
+<!--            <span>Sign In</span>-->
+<!--        </a>-->
+<!--    </div>-->
 
 </div>
 </body>
