--- a/src/main/resources/static/css/starter-template.css
+++ b/src/main/resources/static/css/starter-template.css
@@ -1,8 +1,47 @@
 body {
-
+    background-color: gainsboro;
 }
 
 .starter-template {
     padding: 5rem 5rem;
     text-align: left;
+}
+
+.custom-txt {
+    font-family: sans-serif;
+    font-weight: 800;
+    color: #2350A1;
+    font-size: 260%;
+}
+
+.custom-font {
+    font-family: sans-serif;
+    color: #FFFFFF;
+}
+
+.custom-bg {
+    margin: 10px;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+}
+
+.custom-btn {
+    margin: 20px;
+    border-width: 2px 0.2pc;
+    border-color: #0D3759;
+    background-color: #2350A1;
+}
+
+.custom-label {
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #0D3759;
+    color: #FFFFFF;
+}
+
+.custom-form {
+    background-color: #0D3759;
+    border-radius: 20px;
 }
