--- a/src/main/resources/templates/contractor_view.html
+++ b/src/main/resources/templates/contractor_view.html
@@ -1,117 +1,85 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/header :: head">
-    <!-- Fragment Insert -->
-</head>
+<head th:replace="fragments/header :: head"></head>
 
 <body>
 <div th:replace="fragments/header :: header"></div>
-<main class="container mt-4" role="main">
+
+
+<main class="container" role="main">
     <div class="starter-template">
 
-        <!--Contractor Details Here-->
-        <div id=contractorProfile>
-            <div><h4>Logged in as: Contractor</h4></div>
-        </div>
+        <div class="row mx-auto custom-form">
+            <div class="col mx-auto custom-bg">
+                <div id=timeSheetDetails>
 
-        <!-- timesheet Form Here -->
-        <div id=timeSheetDetails>
+                    <form action="#" method="post" th:action="@{/newTimesheet}" th:object="${TimesheetKey}">
 
+                        <!--Contractor Details Here-->
+                        <div class="custom-label" id=contractorProfile>
+                            <div><h4>Logged in as: Contractor</h4></div>
+                        </div>
+
+                        <div class="custom-label">
+                            <h3>Please Enter Your Time Sheet Details</h3>
+                        </div>
+
+                        <div class="form-group custom-label">
+                            <label th:for="daysWorked">Days Worked</label>
+                            <input aria-describedby="Enter how many days you have worked."
+                                   class="form-control"
+                                   placeholder="Days Worked"
+                                   th:field="*{days_worked}"
+                                   type="text"/>
+
+                            <div class="alert alert-danger"
+                                 th:errors="*{days_worked}"
+                                 th:if="${#fields.hasErrors('days_worked')}">
+                                Days Worked Error: Please enter a valid number.
+                            </div>
+                        </div>
+
+
+                        <div class="form-group custom-label">
+                            <label th:for="overtime_completed">Overtime Completed</label>
+
+                            <input aria-describedby="Enter the amount of overtime completed."
+                                   class="form-control"
+                                   placeholder="Overtime Completed"
+                                   th:field="*{overtime_completed}"
+                                   type="text"/>
+
+                            <div class="alert alert-danger"
+                                 th:errors="*{overtime_completed}"
+                                 th:if="${#fields.hasErrors('overtime_completed')}">
+                                Overtime Error: Please enter a valid number.
+                            </div>
+                        </div>
+
+                        <div class="form-group custom-label custom-font">
+                            <label th:for="week_ending"><h3>Week Ending</h3></label>
+                            <p id="lastDay">
+                        </div>
+
+                        <div class="row mt-4">
+                            <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
+
+                            <input class="btn btn-lg btn-primary btn-block custom-btn" id="submit" type="submit"
+                                   value="Submit Time Sheet Form"/>
+                        </div>
+                    </form>
+                </div>
             </div>
-
-            <h3>Please Enter Your Time Sheet Details</h3>
-
-            <form action="#" method="post" th:action="@{/newTimesheet}" th:object="${TimesheetKey}">
-
-                <div class="form-group">
-                    <label th:for="name">Name</label>
-                    <!--placeholder="Your name"-->
-                    <input aria-describedby="Enter your name."
-                           class="form-control"
-                           placeholder="To Be Embedded In the Future"
-                           th:field="*{name}"
-                           type="text"/>
-                    <div class="alert alert-danger"
-                         th:errors="*{name}"
-                         th:if="${#fields.hasErrors('name')}">
-                        Name Error
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label th:for="agency">Agency</label>
-                    <input aria-describedby="Enter the name of Agency"
-                           class="form-control"
-                           placeholder="Agency"
-                           th:field="*{agency}"
-                           type="text"/>
-                    <div class="alert alert-danger"
-                         th:errors="*{agency}"
-                         th:if="${#fields.hasErrors('agency')}">
-                        Agency Error: Please enter the correct Agency name.
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label th:for="daysWorked">Days Worked</label>
-                    <input aria-describedby="Enter how many days you have worked."
-                           class="form-control"
-                           placeholder="Days Worked"
-                           th:field="*{days_worked}"
-                           type="text"/>
-                    <div
-                            class="alert alert-danger"
-                            th:errors="*{days_worked}"
-                            th:if="${#fields.hasErrors('days_worked')}">
-                        Days Worked Error: Please enter a valid number.
-                    </div>
-                </div>
-
-
-                <div class="form-group">
-                    <label th:for="overtime_completed">Overtime Completed</label>
-                    <input aria-describedby="Enter the amount of overtime completed."
-                           class="form-control"
-                           placeholder="Overtime Completed"
-                           th:field="*{overtime_completed}"
-                           type="text"/>
-                    <div class="alert alert-danger"
-                         th:errors="*{overtime_completed}"
-                         th:if="${#fields.hasErrors('overtime_completed')}">
-                        Overtime Error: Please enter a valid number.
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label th:for="week_ending">Week Ending</label>
-                    <p id="lastDay">
-                </div>
-
-                <input
-                        th:name="${_csrf.parameterName}"
-                        th:value="${_csrf.token}"
-                        type="hidden"/>
-
-                <button class="btn btn-primary-outline" id="submit" type="submit">Submit Time Sheet Form</button>
-
-            </form>
-
-
         </div>
     </div>
 </main>
-
-
-</div>
+</body>
 
 <script>
-
     var startingDate = new Date("15-Nov-2019");
     var lastDay = new Date(startingDate.getTime() + 70 * 70 * 24 * 7 * 1000).toDateString();
     document.getElementById('lastDay').innerText = lastDay;
-
 </script>
 
-</body>
 </html>
