--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,17 +18,12 @@
 <body>
 <!--Fragment Start-->
 <header th:fragment="header" class="masthead mb-auto">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">
-            <div>
-                <img th:src="@{/images/banner_admiral_logo.png}" th:width="235" th:height="68"/>
-            </div>
-            <div>
-                <h1 style="color:#2350A1"><b> | TSP Portal</b></h1>
-            </div>
+    <div class="navbar navbar-expand-lg bg-light">
+        <a class="navbar-brand custom-txt" href="/">
+            <img th:src="@{/images/banner_admiral_logo.png}" th:width="235" th:height="68"/>
+            TSP Portal
         </a>
-
-    </nav>
+    </div>
 </header>
 <!--Fragment End-->
 </body>
