--- a/src/main/resources/templates/timesheet_view.html
+++ b/src/main/resources/templates/timesheet_view.html
@@ -16,9 +16,9 @@
     </div>
 
 
-    <div class="row mt-4">
+    <div class="row mt-4 custom-label">
         <h4 th:text="'Contractor Time Sheets'"></h4>  </div>
-        <div class = "mx-3">
+        <div class="mx-3">
             <table>
                 <thead>
                 <tr>
