Altered Views + Need to change saving + Need to Return Properly

--- a/src/main/resources/templates/manager_view.html
+++ b/src/main/resources/templates/manager_view.html
@@ -24,14 +24,14 @@
 
                 <div class="custom-form">
                     <div class="mx-3 custom-bg">
-                        <table>
+                        <table class="table table-light">
                             <thead>
                             <tr>
-                                <th>Name</th>
-                                <th>Agency</th>
-                                <th>Days Worked</th>
-                                <th>Overtime</th>
-                                <th>Week finished</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Agency</th>
+                                <th scope="col">Days Worked</th>
+                                <th scope="col">Overtime</th>
+                                <th scope="col">Week finished</th>
                             </tr>
                             </thead>
                             <tbody>
