--- a/src/main/resources/templates/manager_view.html
+++ b/src/main/resources/templates/manager_view.html
@@ -32,8 +32,8 @@
                 </thead>
                 <tbody>
                 <tr th:each="Timesheet: ${TimesheetKey}">
-                    <td><span th:text="${Timesheet.contractor.name}"></span></td>
-                    <td><span th:text="${Timesheet.agency.name}"></span></td>
+                    <td><span th:text="${Timesheet.contractor.user.firstname} + ' ' + ${Timesheet.contractor.user.surname}"></span></td>
+                    <td><span th:text="${Timesheet.contractor.agency.name}"></span></td>
                     <td><span th:text="${Timesheet.daysWorked}"></span></td>
                     <td><span th:text="${Timesheet.overtime}"></span></td>
                     <td><span th:text="${Timesheet.week_finish}"></span></td>
