Small Adjustments to Html

--- a/src/main/resources/templates/contractor_view.html
+++ b/src/main/resources/templates/contractor_view.html
@@ -18,7 +18,7 @@
 
                         <!--Contractor Details Here-->
                         <div class="custom-label" id=contractorProfile>
-                            <div><h4>Logged in as: Contractor</h4></div>
+                            <div><h4 th:text="'Logged in as: '+ ${User}"></h4></div>
                         </div>
 
                         <div class="custom-label">
