--- a/src/main/resources/templates/review_approval.html
+++ b/src/main/resources/templates/review_approval.html
@@ -54,9 +54,7 @@
 
                                     <div class="form-group custom-label">
                                         <label th:for="quality">Quality</label>
-
-                                        <input aria-describedby="Enter the amount of overtime completed."
-                                               class="form-control"
+                                        <input class="form-control"
                                                th:field="*{quality}"
                                                type="number" pattern="/d*"/>
                                     </div>
