--- a/src/main/resources/static/css/starter-template.css
+++ b/src/main/resources/static/css/starter-template.css
@@ -51,6 +51,7 @@ body {
     background-color: #0D3759;
     border-radius: 20px;
 }
+
 @media (min-width: 768px) {
     .container-fluid>.navbar-header,
     .container>.navbar-header {
@@ -62,4 +63,11 @@ body {
         max-height: 500px;
         max-width: 100%;
     }
+}
+
+.modal-open {
+    position: fixed;
+    overflow: scroll;
+    width: 100%;
+    padding-right: 0!important;
 }
