--- a/src/main/resources/templates/timesheet_view.html
+++ b/src/main/resources/templates/timesheet_view.html
@@ -11,18 +11,18 @@
     <div class="starter-template">
 
 
-    <div id=missingTimesheetMessage th:if="${TimesheetKey}==  null">
-        <div>No matching Time Sheet</div>
-    </div>
+        <div id=missingTimesheetMessage th:if="${TimesheetKey}==  null">
+            <div>No matching Time Sheet</div>
+        </div>
 
 
-    <div class="row mt-4 custom-label">
-        <h4 th:text="'Contractor Time Sheets'"></h4>  </div>
+        <div class="row mt-4 custom-label">
+            <h4 th:text="'Contractor Time Sheets'"></h4></div>
         <div class="mx-3">
             <table>
                 <thead>
                 <tr>
-                    <th>Name </th>
+                    <th>Name</th>
                     <th> Agency</th>
                     <th> Days Worked</th>
                     <th> Overtime</th>
@@ -31,13 +31,14 @@
                 </thead>
                 <tbody>
                 <tr>
-<!--                    th:each="timesheet: ${TimesheetKey}">-->
-                    <td><span th:text="${TimesheetKey.contractor.user.firstname} + ' ' ${TimesheetKey.contractor.user.surname}" /></td>
-                    <td><span th:text="${TimesheetKey.contractor.agency.name}" /></td>
-                    <td><span th:text="${TimesheetKey.daysWorked}" /></td>
-                    <td><span th:text="${TimesheetKey.overtime}" /></td>
-                    <td><span th:text="${TimesheetKey.week_finish}" /></td>
-
+                    <!--                    th:each="timesheet: ${TimesheetKey}">-->
+                    <td><span
+                            th:text="${TimesheetKey.contractor.user.firstname} + ' ' ${TimesheetKey.contractor.user.surname}"/>
+                    </td>
+                    <td><span th:text="${TimesheetKey.contractor.agency.name}"/></td>
+                    <td><span th:text="${TimesheetKey.daysWorked}"/></td>
+                    <td><span th:text="${TimesheetKey.overtime}"/></td>
+                    <td><span th:text="${TimesheetKey.week_finish}"/></td>
 
 
                 </tbody>
@@ -45,6 +46,6 @@
 
         </div>
     </div>
-   </main>
+</main>
 </body>
 </html>
